--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
       <version>2.1.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-redis</artifactId>
+      <version>1.4.7.RELEASE</version>
+    </dependency>
+
   </dependencies>
 
   <build>
