--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,11 @@ spring:
       url: jdbc:mysql://localhost:3306/ruiji?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: root
       password: "Aa123456"
+  redis:
+    host: localhost
+    port: 6379
+    password:
+    database: 0
 mybatis-plus:
   configuration:
     #address_book -> AddressBook
