--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,18 @@
       <version>1.4.7.RELEASE</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
+      <version>2.7.14 </version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-cache</artifactId>
+      <version>2.4.4</version>
+    </dependency>
+
   </dependencies>
 
   <build>
