--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
       <version>2.4.4</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.shardingsphere</groupId>
+      <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+      <version>4.0.0-RC1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
